# TagOtomatik

./: .clinerules  PROJECT_MAP.md  Starter_Instruction.md  cahier-des-charges.md  package-lock.json  package.json  task.md
.agent/workflows/: validate.md
.github/: copilot-instructions.md
scripts/: analyze-dead-code.sh  auto-fix.sh  auto-format.sh  check-antipatterns.sh  check-architecture.sh  check-circular-imports.sh  check-complexity.sh  check-dead-code.sh  check-eslint.sh  check-file-size-complete.sh  check-file-size.sh  check-french-naming-frontend.sh  check-french-naming.sh  check-frontend-quality.sh  check-security.sh  check-typescript-quality.sh  check-unwrap.sh  check-vue-quality.sh  check-vue-size.sh  full-code-audit.sh  generate-context.sh  generate-report.sh  install-hooks.sh  pre-commit.sh  profile_performance.sh  sentinel.sh
scripts/impact-detection/: check-quality.sh  (+2 more)
src/: App.vue  constants.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: apply.rs  converter.rs  correct.rs  cover.rs  exception.rs  history.rs  metadata.rs  mod.rs  player.rs  playlist.rs  scan.rs  write.rs
src-tauri/src/db/: database.rs
src-tauri/src/models/: album.rs  error.rs  exception.rs  mod.rs  playlist.rs  scan.rs  track.rs
src-tauri/src/services/: audio.rs  cleaner.rs  converter.rs  cover.rs  dictionaries.rs  equalizer.rs  exception.rs  inspector.rs  io.rs  mod.rs  musicbrainz.rs  player.rs  playlist.rs  processor.rs  processor_tests.rs  renamer.rs  scanner.rs  validator.rs
(+45 files in other folders)
