[package]
name = "temp_init"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "temp_init_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.15"
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
regex = "1"
md5 = "0.8.0"
tauri-plugin-dialog = "2.4.2"
lazy_static = "1.5.0"
rodio = "0.17.3"
reqwest = { version = "0.13.1", features = ["json"] }
image = "0.25.9"
urlencoding = "2.1.3"
sanitize-filename = "0.6.0"
tauri-plugin-fs = "2.4.4"
pathdiff = "0.2.3"

